test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/postfix_incr_string.plx
#  can't apply postfix ++/-- to string literals
pub fn main(none) i32 {
    "foo"++
    return 0
}
